--- a/about.html
+++ b/about.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Hello, I'am Vincent a junior developer.</h1>
+    <div class="card">
     <p>I'm a young decent man not that good in programming but am learning step <br> by step and keeping on moving and improving little by little,learning from others who are <br> more experienced than me.I have not created many web but I have some short website for <br> practice which helps me to improve day by day .</p>
+</div> 
 <img src="css/img/qw.jpg" alt="">
     
 </body>
