--- a/contact.html
+++ b/contact.html
@@ -5,15 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
-    <link rel="stylesheet" href="css/zxx.jpg">
-    <link rel="stylesheet" href="css/img/rgt.png">
     <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
-    <h1>You can contact me through;</h1>
-<img src="css/zxx.jpg" alt="">
-<img src="css/img/call.png" alt="">
+    <h1>You can contact me through;</h1> 
+<img src="css/zxx.jpg" alt="image 1">
+<img src="css/img/call.png" alt="image 2">
     
 </body>
 </html>
