--- a/home.html
+++ b/home.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Portfolio</title>
-    <link rel="stylesheet" href="css/img/we.png">
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div id="container"> 
-        <h1>Hello,my name is</h1>
-        <h1>Vincent Mwiti</h1>
-        <h1>I'm a Junior Developer</h1>
-        <img src="css/img/we.png" alt="">
+    <div id="container">
+        <h1>Vincent's Portfolio</h1> 
+        <div class="card">
+        <h2>Hello ,  my name is</h2>
+        <h3>Vincent Mwiti</h3>
+  <h4> I'm a Junior Developer</h4>
+  <h5>Welcome to my portfolio page</h5>
+</div>
     </div>
-    
+
+    <img src="css/img/we.png" alt="">
 </body>
 </html>
