--- a/skills.html
+++ b/skills.html
@@ -5,19 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/img/kdf.jpg">
 </head>
 <body>
     <h1>My Skills</h1>
+    <div class="card">
     <p>I do not have that much skills on programming since I'am a junior <br> developer and am still learning on how to improve my learning experience <br> but I have some skills on some the the following terms below;</p>
-    <ol>
+    </div>
+
+  <ol>
+      <div class="card">
         <li>Html</li>
         <li>Css</li>
         <li>Bootstrap</li>
         <li>A bit of javascript</li>
         <li>And a lot more</li>
-        <img src="css/img/kdf.jpg" alt="">
-    </ol>
+      </div>
+    </ol> 
+</div>
+    <img src="css/img/kdf.jpg" alt="">
 </body>
 </html>
