added a README.md

--- a/home.html
+++ b/home.html
@@ -20,5 +20,11 @@
     </div>
 
     <img src="css/img/we.png" alt="">
+
+    <h2>My Projects</h2>
+    <p> Lorem, <a href="https://github.com/Vmwiti/my-portfolio-page"> my-portfolio-page</a> ipsum dolor sit amet consectetur adipisicing elit. Veritatis sed recusandae in deserunt voluptahttps. Tempore neque ipsam facere omnis aliquid.   </p>
+    <p> Lorem, <a href="https://github.com/Vmwiti/Hello-people">Hello-people</a> amet consectetur adipisicing elit. Veritatis sed recusandae in deserunt voluptate. Tempore neque ipsam facere omnis aliquid.   </p>
+    <p> Lorem,<a href="https://github.com/Vmwiti/FONT-PRACTICE">FONT-PRACTICE</a> ipsum dolor sit amet consectetur adipisicing elit. Veritatis sed recusandae in deserunt voluptate. Tempore neque ipsam facere omnis aliquid.   </p>
+
 </body>
 </html>
